--- a/practice project/product-practice-project/src/app/modules/shared/components/nav-bar/nav-bar.component.html
+++ b/practice project/product-practice-project/src/app/modules/shared/components/nav-bar/nav-bar.component.html
@@ -25,7 +25,7 @@
         >
       </li>
       <ng-template #authlinks>
-        <li class="nav-item">
+        <li *ngIf="(userData$ | async)?.role" class="nav-item">
           <a class="nav-link" routerLink="add-product" routerLinkActive="active"
             >Add Products</a
           >
